--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@shoutem/ui": "^0.23.4",
     "react": "16.4.1",
     "react-native": "0.56.0",
-    "react-native-cheerio": "^1.0.0-rc.4"
+    "xmldom": "^0.1.27"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
