--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@shoutem/ui": "^0.23.4",
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-htmlview": "^0.13.0",
     "react-navigation": "^2.13.0",
     "xmldom": "^0.1.27"
   },
